--- a/Client/Pages/Board.razor
+++ b/Client/Pages/Board.razor
@@ -11,6 +11,7 @@
     .vertex {
         width: 4px;
         height: 4px;
+        margin: -2px;
         border-radius: 2px;
         background-color: red;
     }
